--- a/html/index.html
+++ b/html/index.html
@@ -1,8 +1,14 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>something</title>
-    <link rel="stylesheet" href="/css/index.css">
-  </head>
+
+<head>
+  <meta charset="utf-8">
+  <title>something</title>
+  <link rel="stylesheet" href="index.css">
+</head>
+
+<body>
+  <h1>This works!</h1>
+</body>
+
 </html>
